LPD-54423 buildRest
